fix: cook-time align

--- a/frontend/naengpa/src/containers/ExtractMLFeature/ExtractMLFeature.scss
+++ b/frontend/naengpa/src/containers/ExtractMLFeature/ExtractMLFeature.scss
@@ -46,9 +46,7 @@
     font-size: 100%;
 
     #cook-time {
-      text-align:right;
       font-size: 100%;
-      right: 0;
       width: 7%;
       border: none;
     }
